SONARPY-2032 Adapt (executable) lines of code metric for Jupyter Notebooks (#1883)